<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme.NoActionBar">

    <EditText
        android:id="@+id/etEditName1"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:hint="@string/name"
        android:layout_gravity="center_horizontal" />
    <EditText
        android:id="@+id/etEditSurname1"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:hint="@string/surname"
        android:layout_gravity="center_horizontal" />
    <EditText
        android:id="@+id/etEditWork1"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:hint="@string/work"
        android:layout_gravity="center_horizontal" />

</LinearLayout>