<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:elevation="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@drawable/background_profile"
            >

            <Button
                android:layout_gravity="right"
                android:id="@+id/btnEdit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/baseline_edit_white_24dp"

                />
            <ImageView
                android:id="@+id/image_profile"
                android:adjustViewBounds="true"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/img" />
            <TextView
                android:id="@+id/tvNameSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_surname"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center_horizontal">
            </TextView>
            <TextView
                android:id="@+id/tvWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work"
                android:textSize="18sp"
                android:textColor="@color/colorSecondaryLight"
                android:layout_gravity="center_horizontal">
            </TextView>



        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1.5">

                <TextView
                    android:id="@+id/tvUncompleted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12"
                    android:textSize="30sp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CurTasks"
                    android:textSize="12sp"
                    android:layout_gravity="center_horizontal"/>

                <View
                    android:layout_width="20dp"
                    android:layout_height="2dp"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="#ff9703" />
            </LinearLayout>
            <View
                android:layout_width="2dp"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:layout_marginBottom="13dp"
                android:layout_marginTop="13dp"
                android:background="@color/background"
                android:foregroundGravity="center"
                android:layout_weight="0.01"/>
            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCompleted"
                    android:text="@string/_12"
                    android:textSize="30sp"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/completed_tasks"
                    android:textSize="12sp"
                    android:layout_gravity="center_horizontal"/>
                <View
                    android:layout_width="20dp"
                    android:layout_gravity="center"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                android:background="@color/colorGreen" />
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorAccentLight" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rvEvents"/>
    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>